# DegenScore-Card

./: .dockerignore  .editorconfig  .env  .env.example  .env.local  .env.local.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_FILES_MANIFEST.txt  AUDIT_README.md  AUDIT_REPORT.md  AUDIT_TECHNICAL_COMPLETO.md  AUTONOMOUS_WORK_SUMMARY.md  Anchor.toml  BADGES_IMPLEMENTATION_PLAN.md  BRANCH_STATE_SUMMARY.md  BUSINESS_PLAN_IMPLEMENTATION.md  Badges.ts  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_QUALITY_SETUP.md  CODE_REVIEW_NOTES.md  CONTRIBUTING.md  DATABASE_SCHEMA_FIX_SUMMARY.md  DEBUG_VERCEL_CANVAS.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  DegenCard-integration-example.tsx  Dockerfile  Dockerfile.dev  ENTERPRISE_SECURITY_AUDIT.md  EXTERNAL_AUDIT_READINESS.md  FINDINGS_SUMMARY.csv  FIXES_APPLIED.md  FIXME_DATABASE_SCHEMA.md  (+103 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.husky/: pre-commit
__mocks__/: node-fetch.ts  uncrypto.js  upstash-redis.js
__tests__/: AITradingCoach.test.tsx  AchievementPopup.test.tsx  Analytics.test.tsx  AnalyticsDashboard.test.tsx  AnimatedToast.test.tsx  BadgesDisplay.test.tsx  Celebration.test.tsx  ChallengeWinnersWidget.test.tsx  CompareContent.test.tsx  DailyChallengesWidget.test.tsx  (+46 more)
programs/degen-nft/: Cargo.toml
programs/degen-nft/src/: lib.rs
programs/degen-nft/tests/: integration_test.rs  lib.rs
programs/degen-token/: Cargo.toml
programs/degen-token/src/: lib.rs
programs/degen-token/tests/: integration_test.rs  lib.rs
(+1377 files in other folders)
