[package]
name = "degen-nft"
version = "0.1.0"
description = "DegenScore NFT - Dynamic on-chain trading cards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "1.13.1"
