[package]
name = "degen-token"
version = "0.1.0"
description = "$DEGEN - The DegenScore utility token"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "degen_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
